@@ -10,48 +10,48 @@ function toggleSelect(toggleSelectButton, selectAllText, deselectAllText) {
     formElements = toggleSelectButton.form.elements;
 
     if (isSelected) {
-        for (i = 0; i < formElements.length; i++) {
-            formElements[i].checked = false;
-        }
-        isSelected = false;
-        toggleSelectButton.value = selectAllText;
+	for (i = 0; i < formElements.length; i++) {
+	    formElements[i].checked = false;
+	}
+	isSelected = false;
+	toggleSelectButton.value = selectAllText;
     } else {
-        for (i = 0; i < formElements.length; i++) {
-            formElements[i].checked = true;
-        }
-        isSelected = true;
-        toggleSelectButton.value = deselectAllText;
+	for (i = 0; i < formElements.length; i++) {
+	    formElements[i].checked = true;
+	}
+	isSelected = true;
+	toggleSelectButton.value = deselectAllText;
     }
 }
 
 //************************************************************
 // Tooltips
-function toggleFormTooltip(id) {
+function toggleElementVisibility(id) {
     element = document.getElementById(id);
     if (element) {
-        if (element.style.visibility == 'hidden') {
-            element.style.visibility = 'visible';
-        } else {
-            element.style.visibility = 'hidden';
-        }
+	if (element.style.visibility == 'hidden') {
+	    element.style.visibility = 'visible';
+	} else {
+	    element.style.visibility = 'hidden';
+	}
     }
 }
 
-function showFormTooltip(show, id) {
+function showElement(show, id) {
     element = document.getElementById(id);
     if (element) {
-        if (show) {
-            element.style.visibility = 'visible';
-        } else {
-            element.style.visibility = 'hidden';
-        }
+	if (show) {
+	    element.style.visibility = 'visible';
+	} else {
+	    element.style.visibility = 'hidden';
+	}
     }
 }
 
 //************************************************************
 function trim(s) {
     if (s) {
-        return s.replace(/^\s*|\s*$/g, "");
+	return s.replace(/^\s*|\s*$/g, "");
     }
     return "";
 }
@@ -60,8 +60,8 @@ function trim(s) {
 function checkEmptySearch(formElem) {
     var query = trim(formElem.SearchableText.value);
     if (query != '') {
-        formElem.SearchableText.value = query;
-        return true;
+	formElem.SearchableText.value = query;
+	return true;
     }
     formElem.SearchableText.value = query;
     formElem.SearchableText.focus();
@@ -72,17 +72,17 @@ function checkEmptySearch(formElem) {
 function setFocus() {
     field = document.getElementById('field_focus');
     if (field) {
-        field.focus();
+	field.focus();
     }
 }
 
 function validateRequiredFields(fieldIds, fieldLabels, informationText) {
     for (i = 0; i < fieldIds.length; i++) {
-        element = document.getElementById(fieldIds[i]);
-        if (element && !element.value) {
-            window.alert("'" + fieldLabels[i] + "' " + informationText);
-            return false;
-        }
+	element = document.getElementById(fieldIds[i]);
+	if (element && !element.value) {
+	    window.alert("'" + fieldLabels[i] + "' " + informationText);
+	    return false;
+	}
     }
     return true;
 }
