@@ -10,3 +10,7 @@ Bug fixes:
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - optimizing 'search here', make it much faster than 'search entire site'
+- Some JavaScript functions renamed as they are now used for things other than
+  just tooltips
+  toggleFormTooltip -> toggleElementVisibility
+  showFormTooltip   -> showElement
